SLCORE-1555 Switch to different WS server implementation